--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <!-- custom stylesheets -->
   <link rel="stylesheet" href="/css/common-layout.css">
   <link rel="stylesheet" href="/css/common-text.css">
-
+  <!-- fontawesome cdn -->
+<script src="https://use.fontawesome.com/1cc2ffd043.js"></script>
 
   <!-- offline stylesheets -->
 
@@ -23,41 +24,103 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">disaster</a>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+
+    <a class="navbar-brand text-dark" href="#">
+    <!-- <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+    <i class="fa fa-shield " aria-hidden="true"></i>
+    Department Of Disaster Management
+  </a>
+    <!-- <a class="navbar-brand" href="#">Department Of Disaster Management</a> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <!-- <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link text-white" href="#">About Us</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Contact Us</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link text-white" href="#">Incident Report Center</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link text-white" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Link</a>
+        </li> -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Infomation Center
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
+
+
+        <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        </li> -->
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+      <!-- <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+        <button class="btn btn btn-dark my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
+        <ul class="nav justify-content-end">
+
+          <li class="nav-item">
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn btn-dark my-2 my-sm-0" type="submit">Search</button>
+              </form>
+          </li>
+          <li class="nav-item">
+          <button type="button" class="btn btn-light my-2 my-sm-0">Logout</button>
+          </li>
+
+        </ul>
+    </div>
     </div>
   </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
