--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-
+<!-- nav start -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
 
     <a class="navbar-brand text-dark" href="#">
@@ -92,7 +92,7 @@
               </form>
           </li>
           <li class="nav-item">
-          <button type="button" class="btn btn-light my-2 my-sm-0">Logout</button>
+          <a href=""><button type="button" class="btn btn-light my-2 my-sm-0">Logout</button></a>
           </li>
 
         </ul>
@@ -100,6 +100,7 @@
     </div>
   </nav>
 
+<!-- nav end -->
 
 
 
