--- a/index.html
+++ b/index.html
@@ -97,7 +97,19 @@
 
 <!-- nav end -->
 
-
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="" alt="Third slide">
+    </div>
+  </div>
+</div>
 
 
 
