--- a/index.html
+++ b/index.html
@@ -97,19 +97,72 @@
 
 <!-- nav end -->
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="" alt="First slide">
+      <img class="d-block w-100" src="images/andrew-gaines-365269.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>Welcom To Department Of Disaster Management</h5>
+    <p>We cannot stop natural disasters but we can arm ourselves with knowledge: so many lives wouldn't have to be lost if there was enough disaster preparedness.</p>
+  </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="" alt="Second slide">
+      <img class="d-block w-100" src="images/arny-mogensen-172490.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>Welcom To Department Of Disaster Management</h5>
+    <p>Learn from the past, look to the future, but live in the present.</p>
+  </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="" alt="Third slide">
+      <img class="d-block w-100" src="images/benjamin-kerensa-363991.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>Welcom To Department Of Disaster Management</h5>
+    <p>We cannot stop natural disasters but we can arm ourselves with knowledge: so many lives wouldn't have to be lost if there was enough disaster preparedness.</p>
+  </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/madi-robson-113926.jpg" alt="Forth slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>Welcom To Department Of Disaster Management</h5>
+    <p>Learn from the past, look to the future, but live in the present.</p>
+  </div>
     </div>
   </div>
+
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+
+
+
+<!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="images/andrew-gaines-365269.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/arny-mogensen-172490.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/benjamin-kerensa-363991.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/madi-robson-113926.jpg" alt="Third slide">
+    </div>
+  </div>
+</div> -->
 
 
 
