--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <ul class="nav justify-content-end">
 
           <li class="nav-item">
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn btn-dark my-2 my-sm-0" type="submit">Search</button>
-              </form>
+              </form> -->
           </li>
           <li class="nav-item">
-          <a href=""><button type="button" class="btn btn-light my-2 my-sm-0">Logout</button></a>
+          <a href=""><button type="button" class="btn btn-dark my-2 my-sm-0">Logout</button></a>
           </li>
 
         </ul>
@@ -147,23 +147,15 @@
 
 
 
-<!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="images/andrew-gaines-365269.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/arny-mogensen-172490.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/benjamin-kerensa-363991.jpg" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/madi-robson-113926.jpg" alt="Third slide">
-    </div>
-  </div>
-</div> -->
-
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
 
 
 
