--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li> -->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link text-white" href="#">Home</a>
         </li>
         <li class="nav-item">
@@ -67,7 +67,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </li>
+        </li> -->
 
 
         <!-- <li class="nav-item">
@@ -81,13 +81,12 @@
         <ul class="nav justify-content-end">
 
           <li class="nav-item">
-            <!-- <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn btn-dark my-2 my-sm-0" type="submit">Search</button>
-              </form> -->
-          </li>
-          <li class="nav-item">
-          <a href=""><button type="button" class="btn btn-dark my-2 my-sm-0">Logout</button></a>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="User Name" >
+              <input class="form-control mr-sm-2" type="password" placeholder="Password" >
+              <button class="btn btn btn-dark btn-space my-2 my-sm-0" type="submit">Log In</button>
+              <button class="btn btn btn-warning btn-space my-2 my-sm-0" type="submit">Sign Up</button>
+              </form>
           </li>
 
         </ul>
@@ -97,65 +96,6 @@
 
 <!-- nav end -->
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="images/andrew-gaines-365269.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>Welcom To Department Of Disaster Management</h5>
-    <p>We cannot stop natural disasters but we can arm ourselves with knowledge: so many lives wouldn't have to be lost if there was enough disaster preparedness.</p>
-  </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/arny-mogensen-172490.jpg" alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>Welcom To Department Of Disaster Management</h5>
-    <p>Learn from the past, look to the future, but live in the present.</p>
-  </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/benjamin-kerensa-363991.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>Welcom To Department Of Disaster Management</h5>
-    <p>We cannot stop natural disasters but we can arm ourselves with knowledge: so many lives wouldn't have to be lost if there was enough disaster preparedness.</p>
-  </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/madi-robson-113926.jpg" alt="Forth slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>Welcom To Department Of Disaster Management</h5>
-    <p>Learn from the past, look to the future, but live in the present.</p>
-  </div>
-    </div>
-  </div>
-
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-
-
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
-</div>
 
 
 
